# steamos-manager

./: .gitlab-ci.yml  Cargo.toml  Makefile  README.md  com.steampowered.SteamOSManager1.xml
data/: com.steampowered.SteamOSManagerFD.conf  com.steampowered.SteamOSManagerFD.service  root-dbus.conf  steamosmanagerfd.service
data/devices/: jupiter.toml  legion-go-s.toml  legion-go-series.toml  msi-claw-series.toml  rog-ally-series.toml  zotac-gaming-zone.toml
data/interfaces/: com.steampowered.SteamOSManager1.xml
data/system/: steamos-manager.service
data/user/: steamos-manager-session-cleanup.service  steamos-manager.service
src/: hardware.rs  inputplumber.rs  lib.rs  manager.rs  platform.rs  power.rs  screenreader.rs  session_management.rs  systemd.rs  testing.rs  uinput.rs
src/daemon/: root.rs  user.rs
src/manager/: root.rs  user.rs
src/proxy/: mod.rs  screenreader0.rs  session_management1.rs
steamos-manager/: Cargo.toml
steamos-manager-macros/: Cargo.toml
steamos-manager-macros/src/: lib.rs
steamos-manager-proxy/: Cargo.toml
steamos-manager-proxy/src/: audio1.rs  cpu_boost1.rs  lib.rs  remote_interface1.rs  screenreader0.rs  screenreader1.rs  session_management1.rs
steamos-manager/src/: audio.rs  cec.rs  gpu.rs  hardware.rs  inputplumber.rs  lib.rs  platform.rs  power.rs  screenreader.rs  session.rs  testing.rs  udev.rs  uinput.rs  wifi.rs
steamos-manager/src/daemon/: config.rs  mod.rs  root.rs  user.rs
steamos-manager/src/manager/: root.rs  user.rs
steamos-manager/src/sls/: mod.rs
